examples/test/testpolicy15899.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15899
  namespace: namespace336
spec:
  podSelector:
    matchLabels:
      key23: value7
      key19: value47
      key27: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value22
          key45: value37
      podSelector:
        matchLabels:
          key14: value37
          key4: value16
